--- a/CSS - Personal Site/css/styles.css
+++ b/CSS - Personal Site/css/styles.css
@@ -1,21 +1,72 @@
-*{
-    padding: 0;
+body {
     margin: 0;
+    text-align: center; /* it will center everything without a width set*/
+    font-family: 'Roboto Slab', sans-serif;
+}
+
+h1 {
+    width: 20%;
+    /* margin: 0 auto 0 auto; top right bottom left */
+    margin: 20px auto; /* top&bottom, left&right */
+    font-size: 4rem; /* 100% font size = 16px */
+    font-family: 'Lobster', cursive;
+    color: #66BFBF;
+    line-height: 2;
+}
+
+h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem; /* width of the letter M, 16px = 100% = 1 em*/
+    color: #66BFBF;
+    font-weight: normal;
+}
+
+h3, a {
+    color: #11999e;
 }
 
 
-.underline {
-    text-decoration: underline;
-}
- 
-.red {
-    background-color: red;
-    width: 200px;
-    height: 200px;
+
+.top-container {
+    background-color: #E4F9F5;
+    position: relative;
+    padding-top: 100px;
 }
 
-.blue {
-    background-color: blue;
-    width: 200px;
-    height: 200px;
+.bio {
+    margin: 20px auto;
 }
+
+.bottom-cloud{
+    position: absolute;
+    left: 300px;
+    bottom: 300px;
+}
+
+.top-cloud {
+    position: absolute;
+    right: 300px;
+    top: 50px;
+    
+}
+
+.skill-row {
+    width: 50%;
+    margin: 100px auto;
+    text-align: left;
+}
+
+.skill-img {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+
+.flutter-img {
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+
+
+
